// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer dark context 1`] = `
<div
  class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
  id="non-modal-test"
>
  This is a non-modal layer
</div>
`;

exports[`Layer dark context 2`] = `
"@media only screen and (max-width:699px) {
  .kEUOXb {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kEUOXb {
    padding: 0;
  }
}"
`;

exports[`Layer full false 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="full-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
    id="full-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer full false 2`] = `""`;

exports[`Layer full horizontal 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="full-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv bjEYGj"
    id="full-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer full horizontal 2`] = `""`;

exports[`Layer full true 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="full-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv GSzV"
    id="full-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer full true 2`] = `""`;

exports[`Layer full vertical 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="full-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv iaUKeX"
    id="full-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer full vertical 2`] = `""`;

exports[`Layer hidden 1`] = `
<div
  class="StyledLayer-EylWz jgMCYq"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv ejGJHU"
    id="hidden-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hidden 2`] = `""`;

exports[`Layer hidden 3`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="hidden-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
    id="hidden-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer hidden 4`] = `""`;

exports[`Layer is accessible 1`] = `
<div
  data-testid="test-body-node"
>
  <input />
  <input
    tabindex="10"
  />
</div>
`;

exports[`Layer is accessible 2`] = `
<div
  data-testid="test-layer-node"
>
  This is a layer
  <input
    data-testid="test-input"
  />
</div>
`;

exports[`Layer is accessible 3`] = `
<div
  data-testid="test-body-node"
>
  <input />
  <input />
</div>
`;

exports[`Layer margin large 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv cIqPkw"
    id="margin-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer margin large 2`] = `""`;

exports[`Layer margin medium 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv lmKNaV"
    id="margin-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer margin medium 2`] = `""`;

exports[`Layer margin none 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
    id="margin-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer margin none 2`] = `""`;

exports[`Layer margin small 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv fStyPD"
    id="margin-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer margin small 2`] = `""`;

exports[`Layer margin xsmall 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="margin-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hZwazE"
    id="margin-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer margin xsmall 2`] = `""`;

exports[`Layer non-modal 1`] = `
<div
  class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
  id="non-modal-test"
>
  This is a non-modal layer
</div>
`;

exports[`Layer non-modal 2`] = `""`;

exports[`Layer plain 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="plain-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv bHOljk"
    id="plain-test"
  >
    This is a plain layer
  </div>
</div>
`;

exports[`Layer plain 2`] = `""`;

exports[`Layer position bottom 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="position-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv fWiMJP"
    id="position-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer position bottom 2`] = `""`;

exports[`Layer position center 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="position-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hXWZjp"
    id="position-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer position center 2`] = `""`;

exports[`Layer position left 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="position-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv dREEaY"
    id="position-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer position left 2`] = `""`;

exports[`Layer position right 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="position-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv kbKCAe"
    id="position-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer position right 2`] = `""`;

exports[`Layer position top 1`] = `
<div
  class="StyledLayer-EylWz bBUHFX"
  id="position-test"
  tabindex="-1"
>
  <div
    class="StyledLayer__StyledOverlay-fQvaYh fMkweM"
  />
  <div
    class="StyledLayer__StyledContainer-iKmEpv hzFSxj"
    id="position-test"
  >
    This is a layer
  </div>
</div>
`;

exports[`Layer position top 2`] = `""`;
